kubernetes/spack/internal-spack-io/glciy/web/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glciy
  namespace: spack
  labels:
    app: glciy
    svc: main
spec:
  selector:
    matchLabels:
      app: glciy
      svc: main
  replicas: 1
  template:
    metadata:
      labels:
        app: glciy
        svc: main
    spec:
      containers:
      - name: web
        image: "opadron/glciy-web"
        imagePullPolicy: Always
        args: [
          "--bind", "0.0.0.0",
          "--port", "8080",
          "http://glciy-worker-centos",
          "http://glciy-worker-ubuntu"]
        ports:
        - name: http
          containerPort: 8080
      nodeSelector:
        "beta.kubernetes.io/instance-type": "t2.medium"
