kubernetes/spack/internal-spack-io/glciy/web/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: glciy
  namespace: spack
  labels:
    app: glciy
    svc: main
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: glciy
    svc: main
